--- a/waiting/client/src/components/Quiz/index.css
+++ b/waiting/client/src/components/Quiz/index.css
@@ -1,5 +1,5 @@
 .next-button {
-    background-color: #FA7C92;
+    background-color: #EE595D;
     color: white;
     font-size: 18px;
     font-weight: bold;
@@ -7,6 +7,10 @@
     border-radius: 2px;
     float: right;
     cursor: pointer;
+    /* font-family: 'Anton', sans-serif; */
+    /* font-family: 'Ranchers', cursive; */
+    font-family: 'Shrikhand', cursive;
+    /* font-family: 'Boogaloo', cursive; */
 }
 
 .next-button:hover {
@@ -17,6 +21,10 @@
     font-size: 18px;
     color: #FA7C92;
     font-weight: bold;
+    /* font-family: 'Anton', sans-serif; */
+    /* font-family: 'Ranchers', cursive; */
+    font-family: 'Shrikhand', cursive;
+    /* font-family: 'Boogaloo', cursive; */
 }
 
 p {
